ziplinter/src/snapshots/ziplinter__test__utf8-infozip.zip.snap
---
source: ziplinter/src/main.rs
expression: result
---
{
  "comment": "",
  "contents": [
    {
      "central": {
        "comment": "",
        "compressed_size": 0,
        "crc32": 0,
        "creator_version": {
          "host_system": "Unix",
          "version": 30
        },
        "disk_nbr_start": 0,
        "external_attrs": 2175008768,
        "extra": [
          85,
          84,
          5,
          0,
          3,
          135,
          207,
          0,
          90,
          117,
          120,
          11,
          0,
          1,
          4,
          232,
          3,
          0,
          0,
          4,
          232,
          3,
          0,
          0
        ],
        "flags": 2048,
        "header_offset": 0,
        "internal_attrs": 0,
        "method": "Store",
        "mode": 420,
        "modified": "2017-11-06T21:09:27Z",
        "name": "世界",
        "reader_version": {
          "host_system": "MsDos",
          "version": 10
        },
        "uncompressed_size": 0
      },
      "local": {
        "accessed": null,
        "compressed_size": 0,
        "crc32": 0,
        "created": null,
        "extra": [
          85,
          84,
          9,
          0,
          3,
          135,
          207,
          0,
          90,
          135,
          207,
          0,
          90,
          117,
          120,
          11,
          0,
          1,
          4,
          232,
          3,
          0,
          0,
          4,
          232,
          3,
          0,
          0
        ],
        "flags": 2048,
        "gid": 1000,
        "header_offset": 0,
        "method": "Store",
        "method_specific": "None",
        "mode": 0,
        "modified": "2017-11-06T21:09:27Z",
        "name": "Σ╕ûτòî",
        "reader_version": {
          "host_system": "MsDos",
          "version": 10
        },
        "uid": 1000,
        "uncompressed_size": 0
      }
    }
  ],
  "encoding": "Utf8",
  "eocd": {
    "dir": {
      "inner": {
        "comment": [],
        "dir_disk_nbr": 0,
        "dir_records_this_disk": 1,
        "directory_offset": 64,
        "directory_records": 1,
        "directory_size": 76,
        "disk_nbr": 0
      },
      "offset": 140
    },
    "dir64": null,
    "global_offset": 0
  },
  "size": 162
}
