ziplinter/src/snapshots/ziplinter__test__utf8-winzip.zip.snap
---
source: ziplinter/src/main.rs
expression: result
---
{
  "comment": "",
  "contents": [
    {
      "central": {
        "comment": "",
        "compressed_size": 0,
        "crc32": 0,
        "creator_version": {
          "host_system": "MsDos",
          "version": 20
        },
        "disk_nbr_start": 0,
        "external_attrs": 0,
        "extra": [
          10,
          0,
          32,
          0,
          0,
          0,
          0,
          0,
          1,
          0,
          24,
          0,
          176,
          168,
          235,
          135,
          67,
          87,
          211,
          1,
          96,
          186,
          240,
          222,
          67,
          87,
          211,
          1,
          176,
          168,
          235,
          135,
          67,
          87,
          211,
          1
        ],
        "flags": 2048,
        "header_offset": 0,
        "internal_attrs": 0,
        "method": "Store",
        "mode": 438,
        "modified": "2017-11-06T21:09:27.867Z",
        "name": "世界",
        "reader_version": {
          "host_system": "MsDos",
          "version": 10
        },
        "uncompressed_size": 0
      },
      "local": {
        "accessed": null,
        "compressed_size": 0,
        "crc32": 0,
        "created": null,
        "extra": [],
        "flags": 2048,
        "gid": null,
        "header_offset": 0,
        "method": "Store",
        "method_specific": "None",
        "mode": 0,
        "modified": "2017-11-06T13:09:28Z",
        "name": "Σ╕ûτòî",
        "reader_version": {
          "host_system": "MsDos",
          "version": 10
        },
        "uid": null,
        "uncompressed_size": 0
      }
    }
  ],
  "encoding": "Utf8",
  "eocd": {
    "dir": {
      "inner": {
        "comment": [],
        "dir_disk_nbr": 0,
        "dir_records_this_disk": 1,
        "directory_offset": 36,
        "directory_records": 1,
        "directory_size": 88,
        "disk_nbr": 0
      },
      "offset": 124
    },
    "dir64": null,
    "global_offset": 0
  },
  "size": 146
}
