ziplinter/src/snapshots/ziplinter__test__zip64.zip.snap
---
source: ziplinter/src/main.rs
expression: result
---
{
  "comment": "",
  "directory_headers": [
    {
      "comment": "",
      "compressed_size": 4294967295,
      "crc32": 1778378622,
      "creator_version": {
        "host_system": "Unix",
        "version": 45
      },
      "disk_nbr_start": 0,
      "external_attrs": 2175008768,
      "extra": "\u0001\u0000\u0010\u0000$\u0000\u0000\u0000\u0000\u0000\u0000\u0000$\u0000\u0000\u0000\u0000\u0000\u0000\u0000",
      "flags": 0,
      "header_offset": 0,
      "internal_attrs": 0,
      "method": "Deflate",
      "modified": {
        "date": 16650,
        "time": 29744
      },
      "name": "README",
      "reader_version": {
        "host_system": "MsDos",
        "version": 45
      },
      "uncompressed_size": 4294967295
    }
  ],
  "encoding": "Utf8",
  "entries": [
    {
      "accessed": null,
      "comment": "",
      "compressed_size": 36,
      "crc32": 1778378622,
      "created": null,
      "flags": 0,
      "gid": null,
      "header_offset": 0,
      "method": "Deflate",
      "mode": 420,
      "modified": "2012-08-10T14:33:32Z",
      "name": "README",
      "reader_version": {
        "host_system": "MsDos",
        "version": 45
      },
      "uid": null,
      "uncompressed_size": 36
    }
  ],
  "eocd": {
    "dir": {
      "inner": {
        "comment": [],
        "dir_disk_nbr": 0,
        "dir_records_this_disk": 65535,
        "directory_offset": 4294967295,
        "directory_records": 65535,
        "directory_size": 4294967295,
        "disk_nbr": 0
      },
      "offset": 220
    },
    "dir64": {
      "inner": {
        "creator_version": 45,
        "dir_disk_nbr": 0,
        "dir_records_this_disk": 1,
        "directory_offset": 72,
        "directory_records": 1,
        "directory_size": 72,
        "disk_nbr": 0,
        "reader_version": 45,
        "record_size": 44
      },
      "offset": 144
    },
    "global_offset": 0
  },
  "size": 242
}
