ziplinter/src/snapshots/ziplinter__test__zip_password.zip.snap
---
source: ziplinter/src/lib.rs
expression: result
---
{
  "comment": "",
  "contents": [
    {
      "central": {
        "comment": "",
        "compressed_size": 0,
        "crc32": 0,
        "creator_version": {
          "host_system": "Unix",
          "version": 30
        },
        "disk_nbr_start": 0,
        "external_attrs": 1106051088,
        "extra": [
          85,
          84,
          5,
          0,
          3,
          214,
          74,
          105,
          105,
          117,
          120,
          11,
          0,
          1,
          4,
          232,
          3,
          0,
          0,
          4,
          232,
          3,
          0,
          0
        ],
        "flags": 0,
        "header_offset": 0,
        "internal_attrs": 0,
        "method": "Store",
        "mode": 2147484141,
        "modified": "2026-01-15T20:15:18Z",
        "name": "dir/",
        "reader_version": {
          "host_system": "MsDos",
          "version": 10
        },
        "uncompressed_size": 0
      },
      "local": {
        "accessed": null,
        "compressed_size": 0,
        "crc32": 0,
        "created": null,
        "extra": [
          85,
          84,
          9,
          0,
          3,
          214,
          74,
          105,
          105,
          150,
          75,
          105,
          105,
          117,
          120,
          11,
          0,
          1,
          4,
          232,
          3,
          0,
          0,
          4,
          232,
          3,
          0,
          0
        ],
        "flags": 0,
        "gid": 1000,
        "header_offset": 0,
        "method": "Store",
        "method_specific": "None",
        "mode": 2147483648,
        "modified": "2026-01-15T20:15:18Z",
        "name": "dir/",
        "reader_version": {
          "host_system": "MsDos",
          "version": 10
        },
        "uid": 1000,
        "uncompressed_size": 0
      }
    },
    {
      "central": {
        "comment": "",
        "compressed_size": 18,
        "crc32": 2055117726,
        "creator_version": {
          "host_system": "Unix",
          "version": 30
        },
        "disk_nbr_start": 0,
        "external_attrs": 2175008768,
        "extra": [
          85,
          84,
          5,
          0,
          3,
          178,
          125,
          224,
          78,
          117,
          120,
          11,
          0,
          1,
          4,
          232,
          3,
          0,
          0,
          4,
          232,
          3,
          0,
          0
        ],
        "flags": 9,
        "header_offset": 62,
        "internal_attrs": 1,
        "method": "Store",
        "mode": 420,
        "modified": "2011-12-08T09:04:50Z",
        "name": "dir/bar",
        "reader_version": {
          "host_system": "MsDos",
          "version": 10
        },
        "uncompressed_size": 6
      },
      "local": {
        "error": "Custom { kind: Other, error: Format(WrongSize { expected: 6, actual: 18 }) }"
      }
    },
    {
      "central": {
        "comment": "",
        "compressed_size": 0,
        "crc32": 0,
        "creator_version": {
          "host_system": "Unix",
          "version": 30
        },
        "disk_nbr_start": 0,
        "external_attrs": 1106051088,
        "extra": [
          85,
          84,
          5,
          0,
          3,
          118,
          126,
          224,
          78,
          117,
          120,
          11,
          0,
          1,
          4,
          232,
          3,
          0,
          0,
          4,
          232,
          3,
          0,
          0
        ],
        "flags": 0,
        "header_offset": 161,
        "internal_attrs": 0,
        "method": "Store",
        "mode": 2147484141,
        "modified": "2011-12-08T09:08:06Z",
        "name": "dir/empty/",
        "reader_version": {
          "host_system": "MsDos",
          "version": 10
        },
        "uncompressed_size": 0
      },
      "local": {
        "accessed": null,
        "compressed_size": 0,
        "crc32": 0,
        "created": null,
        "extra": [
          85,
          84,
          9,
          0,
          3,
          118,
          126,
          224,
          78,
          155,
          75,
          105,
          105,
          117,
          120,
          11,
          0,
          1,
          4,
          232,
          3,
          0,
          0,
          4,
          232,
          3,
          0,
          0
        ],
        "flags": 0,
        "gid": 1000,
        "header_offset": 0,
        "method": "Store",
        "method_specific": "None",
        "mode": 2147483648,
        "modified": "2011-12-08T09:08:06Z",
        "name": "dir/empty/",
        "reader_version": {
          "host_system": "MsDos",
          "version": 10
        },
        "uid": 1000,
        "uncompressed_size": 0
      }
    }
  ],
  "encoding": "Utf8",
  "eocd": {
    "dir": {
      "inner": {
        "dir_disk_nbr": 0,
        "dir_records_this_disk": 3,
        "directory_offset": 229,
        "directory_records": 3,
        "directory_size": 231,
        "disk_nbr": 0
      },
      "offset": 460
    },
    "dir64": null,
    "global_offset": 0
  },
  "parsed_ranges": [
    {
      "contains": "end of central directory record",
      "end": 482,
      "start": 460
    },
    {
      "contains": "central directory header",
      "end": 303,
      "filename": "dir/",
      "start": 229
    },
    {
      "contains": "central directory header",
      "end": 380,
      "filename": "dir/bar",
      "start": 303
    },
    {
      "contains": "central directory header",
      "end": 460,
      "filename": "dir/empty/",
      "start": 454
    },
    {
      "contains": "local file header",
      "end": 62,
      "filename": "dir/",
      "start": 0
    },
    {
      "contains": "file data",
      "end": 62,
      "filename": "dir/",
      "start": 62
    },
    {
      "contains": "local file header",
      "end": 127,
      "filename": "dir/bar",
      "start": 62
    },
    {
      "contains": "file data",
      "end": 145,
      "filename": "dir/bar",
      "start": 127
    },
    {
      "contains": "data descriptor",
      "end": 161,
      "filename": "dir/bar",
      "start": 145
    },
    {
      "contains": "local file header",
      "end": 229,
      "filename": "dir/empty/",
      "start": 161
    },
    {
      "contains": "file data",
      "end": 229,
      "filename": "dir/empty/",
      "start": 229
    }
  ],
  "size": 482
}
